//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table org {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  name String [not null]
  email String [not null]
  phone String [not null]
  address String
  size String
  verified Boolean [not null]
  subscribed Boolean [not null]
  plan SubscriptionPlan
  user user [not null]
  product product [not null]
  customer customer [not null]
  team_member_invitation team_member_invitation [not null]
  api_key api_key [not null]
  stripe_customer stripe_customer
}

Table user {
  iid Int [pk, increment]
  id String [unique, not null]
  created_at DateTime [default: `now()`, not null]
  role Role
  name String [not null]
  email String [unique, not null]
  deactivated Boolean [not null, default: false]
  org org
  org_id String
  team_member_invitation team_member_invitation [not null]
}

Table product {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  name String [not null]
  link String
  description String [not null]
  org org [not null]
  org_id String [not null]
  pmf_survey_response pmf_survey_response [not null]
  task task [not null]
}

Table pmf_survey_response {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  a1 Int [not null]
  a2 String [not null]
  a3 String [not null]
  a4 String [not null]
  product product [not null]
  product_id String [not null]
  task task [not null]
}

Table task {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  score Int [not null]
  task String [not null]
  done Boolean [not null, default: false]
  product product [not null]
  product_id String [not null]
  response pmf_survey_response [not null]
  response_id String [not null]
}

Table team_member_invitation {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  invitee_email String [unique, not null]
  role Role [not null]
  inviter user [not null]
  inviter_id String [not null]
  org org [not null]
  org_id String [not null]
}

Table customer {
  id String [pk]
  cid String [not null]
  imported_at DateTime [default: `now()`, not null]
  created_at DateTime [default: `now()`, not null]
  name String
  email String
  phone String
  org org [not null]
  org_id String [not null]

  indexes {
    (org_id, cid) [unique]
  }
}

Table stripe_webhook_event {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  type String [not null]
  livemode Boolean [not null]
  processed Boolean [not null]
}

Table stripe_customer {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  metered_subscription_id String
  org org [not null]
  org_id String [unique, not null]
}

Table stripe_setup_next {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  next Json [not null]
}

Table api_key {
  id String [pk]
  created_at DateTime [default: `now()`, not null]
  hash String [unique, not null]
  prefix String [not null]
  created_by String [not null]
  description String
  org org [not null]
  org_id String [not null]
}

Enum SubscriptionPlan {
  Standard
}

Enum Role {
  OrgUser
  OrgAdmin
  OrgOwner
}

Ref: user.org_id > org.id [delete: Cascade]

Ref: product.org_id > org.id [delete: Cascade]

Ref: pmf_survey_response.product_id > product.id [delete: Cascade]

Ref: task.product_id > product.id [delete: Cascade]

Ref: task.response_id > pmf_survey_response.id [delete: Cascade]

Ref: team_member_invitation.inviter_id > user.id [delete: Cascade]

Ref: team_member_invitation.org_id > org.id [delete: Cascade]

Ref: customer.org_id > org.id [delete: Cascade]

Ref: stripe_customer.org_id - org.id [delete: Cascade]

Ref: api_key.org_id > org.id [delete: Cascade]